...
                headerStyle: {backgroundColor: theme.colors.background},
                headerTintColor: theme.colors.onBackground,
                headerTitleAlign: 'center',
                headerTitleStyle: {fontSize: 30},
            }}
        >
            <Stack.Screen name="index" options={{title: 'Kartenspiele', headerShown: true}}/>
            <Stack.Screen name="newMauGame"
                          options={{
                              title: 'Mau Mau',
                              headerShown: true,
                          }}
            />
...
