...
        setUsername(json.username);
        setGuest(false.toString());
        console.log(json);
    };

    const signIn = async (username: string, password: string) => {
        const response = await fetchData(sessionToken, '/user/login', 'POST', {
            username: username.trim(),
            password: password,
        });

        if (!response.ok) {
            let json = await response.json();
...
