...

            <Button
                mode="outlined"
                style={profile.signOutButton}
                onPress={() => signOut()}
            >
                Abmelden
            </Button>

            {/*Password Modal*/}
            <Portal>
                <Modal
                    visible={passwordModalVisible}
...
